add info about posting recipe
